# ChangeLog for x11-drivers/xf86-video-ati
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-ati/ChangeLog,v 1.216 2014/06/26 10:28:25 chithanh Exp $

*xf86-video-ati-7.4.0 (26 Jun 2014)

  26 Jun 2014; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xf86-video-ati-7.4.0.ebuild, -xf86-video-ati-7.2.0.ebuild:
  Version bump. Remove old.

  19 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xf86-video-ati-7.3.0.ebuild:
  Stable for sparc, wrt bug #500368

  18 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xf86-video-ati-7.3.0.ebuild:
  Stable for alpha, wrt bug #500368

  17 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xf86-video-ati-7.3.0.ebuild:
  Stable for ia64, wrt bug #500368

  16 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xf86-video-ati-7.3.0.ebuild:
  Stable for ppc64, wrt bug #500368

  08 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xf86-video-ati-7.3.0.ebuild:
  Stable for ppc, wrt bug #500368

  06 Apr 2014; Agostino Sarubbo <ago@gentoo.org> xf86-video-ati-7.3.0.ebuild:
  Stable for x86, wrt bug #500368

  27 Mar 2014; Agostino Sarubbo <ago@gentoo.org> xf86-video-ati-7.3.0.ebuild:
  Stable for amd64, wrt bug #500368

*xf86-video-ati-7.3.0 (26 Jan 2014)

  26 Jan 2014; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +xf86-video-ati-7.3.0.ebuild, -files/xf86-video-ati-6.14.3-pcitag.patch,
  -files/xf86-video-ati-6.14.3-xorg-server-1.12.patch,
  -files/xf86-video-ati-7.0.0-r300-ring-count.patch,
  -xf86-video-ati-6.14.3-r1.ebuild, -xf86-video-ati-7.0.0-r1.ebuild,
  -xf86-video-ati-7.0.0.ebuild, -xf86-video-ati-7.1.0.ebuild:
  Version bump. Drop some old versions.

  08 Oct 2013; Agostino Sarubbo <ago@gentoo.org> xf86-video-ati-7.2.0.ebuild:
  Stable for x86, wrt bug #475480

  07 Oct 2013; Agostino Sarubbo <ago@gentoo.org> xf86-video-ati-7.2.0.ebuild:
  Stable for sparc, wrt bug #475480

  06 Oct 2013; Agostino Sarubbo <ago@gentoo.org> xf86-video-ati-7.2.0.ebuild: