@@ -5,28 +5,28 @@ DIST xf86-video-ati-6.13.2.tar.bz2 985673 SHA256 d85f60081e5b71bf19da4ca48bce95a
 DIST xf86-video-ati-6.14.6.tar.bz2 1139495 SHA256 aa5286b3e4f0187d7df14785c06dd800255d9405205dbf061da5d77df86bec36 SHA512 7ed64bb3596703f7c575aec37a6918bac251819fe638acc66a29aab7648d8a81dedd8d416f970faa1f757fa8e9e3ccdc43e4499d06271cc2751288040d1d957e WHIRLPOOL 9b72e873c3108daeb10cfc68523eb9bc2c12f5525096f9a2639a7dbeb58fd2912b474b8820172ffc9351458d2e046b43e0d064bb4f4189bb99b06a995f3204e8
 DIST xf86-video-ati-7.3.0.tar.bz2 816346 SHA256 107c072c4919a996e04f47afdb53d5946a3ad574f270b8c560ef8b3a032046fe SHA512 185fd0714cae2b5fd29be201dd272f58964303c1bd3e006bfd85e7b260afc0787ee4eb3954fb8452e8876f0094ac8b0be67ebeb29e1b768937afeeecdad3dc32 WHIRLPOOL f70b29c585f4b51aa487173a14050a0bd5772143884d3bc3ef5be00fd3701a4c95ea83079ac045f3c215a0f1c41d8cc83f0db60a151da9b624c4808efbcac19e
 DIST xf86-video-ati-7.4.0.tar.bz2 832763 SHA256 96230ca9859a2a3e347b7f37597b7b344e80b83f378d3a8463ab1ceb69df76d9 SHA512 94f3620972f21dab3c4ead8d18dcd0333903fe820b647f86a0e6efe4edb712ec0450a1cfd32b1ff51ab803ae76aaa889fc8c8cad7b6c52a3b51462c780111458 WHIRLPOOL 7bd0e6d98db97d4fa282e975826aab2e6ade9ce9bdbb958df41f0961a62fc7f78c18755ec10bc1665a80e24db890ca5d9cacbeba19eb70a53a226133e7817044
+DIST xf86-video-ati-7.5.0.tar.bz2 809756 SHA256 ec3e6f06b6cf9a40c72aafa3448aae8b034c80b37410ca9442d5cf6806e07936 SHA512 51ea3934285c579314614e336cee0d5c079a466cdc94f2c8649d9499515af3dfb37a7ac87ed69c6dbf6befa5bfca27f8305bbc028ff722e2f87143da5f101f7c WHIRLPOOL ba132708f423cebde7398cc6c9c18334a544ebaef4a60104ea27abeb4afa4a01b9a3dffa00c89e01a6cbf858cc410041d102c8327bc2167ebca5e941d4463f23
 EBUILD xf86-video-ati-6.13.2.ebuild 761 SHA256 94f2fa9d736c4be35f7a092855838830b64443c20f11e0ab18c58567a7a22dc2 SHA512 ec2a57e96ec31ab0adfe10e6a302607e49fe9156077801ed497747e5916e959d06abaa4c5d9ec06d149b3c4095a4dde900737802dc0e054780f425a8f7248323 WHIRLPOOL 3eece809b66129b7f981a63b3205d9ee3c4e00bf244ca7fb7f6de0ee1569baeb4bc9b9934e2315bd5a82a107442ab9358e539c3fce532cebe5a54c68fb0d5ae8
 EBUILD xf86-video-ati-6.14.6-r1.ebuild 763 SHA256 f1ed4a2aeb86c1ed4163d128727f11b5ad925ec6de404a477651a1e09fa9d6dd SHA512 7f7f8ec188a7b5fc82e72281eedfee1520de1df0203a485951a80b943c9342db66601a1ddc8825544630bf11bc7045be7e5100de1dfec2b3702a676adb88795c WHIRLPOOL 1d07997a0e77627efb9d4ba99858256b253a4661b80f33857772b51a3cd90c5b87b0ab5c9d96f8f39245929c56626ce8fee72a5c7d57373e5d6cd1716d757753
 EBUILD xf86-video-ati-7.3.0.ebuild 841 SHA256 42f990d50d205e598f79f18797334ca9f426b301e8ddf53ec9945afe26942751 SHA512 d6071913010112a00128042f41cdeb1208b79a1f1385b01d0f1c05761e3ad0d731918df24198a3382ecaa6fce356cd74e86b9bae9fd9e999bf031dc7a631ca68 WHIRLPOOL bf63b13668a8f8e253e0a3636845c5f6ee1af0f07c11821c5040e1ea0e3d5a26d4e9d7cc943ba433f1d089cb38ed4232dc35a400e5bd176e4aae6c8f9bedc0ad
 EBUILD xf86-video-ati-7.4.0.ebuild 894 SHA256 7145a21f0348751f6393ef0f08aa6d05d51bbae0a17d7e59df13a06949f4508f SHA512 7d06e4a38463c1c1356ec73922cb0459e27106b2c8999c288a52bfb8b91d3f5e3a4cf9099f55132a03ed97d15a5288e30399b8dd9731a242f6778b3b8fa77824 WHIRLPOOL f9cf3725900ba2a24be3e6371542bb8c0d6ef7228588bdce495b18e862140ad931f8a4df95e194d470b37867dba2f7dfdf8a4884af5659026bff5663bd371898
-MISC ChangeLog 37643 SHA256 680ad7a981728231aa506adf47b57e5719072961d6ffd14faa27cf9457a4eb53 SHA512 0a49109c02f4c04f8e001e4343da14f58c832eb3508e13da0e6c73577598d6ffae190818c3854f310a08e9ae95d5cb46930560fc6c675e612ae25707e0477280 WHIRLPOOL e60cd4757e77afe5183120369b16306fb1dbe85f1380d9567f84bb425818acfece2d5fa3f216043f4bf7c10b6f43e1dbb7adcfc35dd2bcb3447ed6b120c8dfa2
+EBUILD xf86-video-ati-7.5.0.ebuild 1113 SHA256 a45e10d282c61eff1e37fffc57a27bda1dfe1c752f72e7cc8582304ae7f336df SHA512 73bfe6377485a8ff567c4359f3ed0aca5cf572b87c5856828ad19f34259c0de869089bddaf53e49feadcb08e651efa99b5108a97f0e7ca64f40832637b22ce79 WHIRLPOOL 71d1cda3a59ea6be7d146b2e2b64c82ab77c49d742089c8fcc2e308726d6f1c5cf377556fc2f1105aafdf82ebfe9cd998ceaeab7d866f2ce47c19602c58f993b
+MISC ChangeLog 37850 SHA256 eb73324bc68d280bb83a30c9512ff7d7f4583601758e9f1d5ff186ff34ff33de SHA512 b58e391d15e5e25f97d8a12acfe12497c8ee5084cc7cfa8a2a4beaa5982ac6c328680bc3ceace6f7d16dc84f34284a043e1a4e5f73c18602c000ee8459036d95 WHIRLPOOL 351d55dbd588b1031c224060aa20a619fa9eb0e8721d6583bd77079c79d3bc58b2eac698c5e14db5f2238078c4ebc44de95f800842a78e0b703ca098eaf75ff3
 MISC metadata.xml 234 SHA256 c576bf25080db3484d07d654f7154894c03e15ba75c1e0a2461e4b3cee64ea3e SHA512 68aca8ec7b1603cc347d814cacf1415dd0eb3211b28e3325a8218c27a47ebe0e8dcb1d336db6054005da5fd9a85c4c3a7b67fababdb2f0a311e4b6b9e82caec7 WHIRLPOOL a72d888c968b4f22f8b37fe083b70ec18bce0942543fe6d1644ed27080ec882122972c78271689f2096ce6615c9a21ee3e4758da8288be6813da0b1efc07d335
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJTq/XoXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RDFCODdDQUUxMkUwNkJCNjUyMDMxOEIy
-MzI0RTdCNTY2REYyNjExAAoJECMk57Vm3yYR030P/AxU/0HmXvf4sMMx9bGOvtau
-JoCU5x2nVQW0tScQQ1XvwPxPK0/AXVSNlttkiqon872FJ9ztpA3nKzqgzFFN12S+
-+yxzZ0QrQT/HWOB4ym4VMezDD64fSTLa+Mk+GYVsECwkjE4zZM/oy30MSyUPJXA9
-1QoRqwkw/SDHlsiWxXgD4+7HIiLdtbxylHMPI2iH1uoND3F/ieAcUoCr5QMOlUkN
-dOLnCPS3lHL4M6tRE4l2RHVugNMPv+ZoRFGg2pCXk4BysQ6+kjExvNKHaR4YWp1U
-XN9hW5lX4WvMeNDpMgDVuPy2GBw/VzGzDZYTeFdDNz29iOBlY03mVR2tIozJIM/O
-nir/xmXH0Jyc/UboTOK4JMLNpxIkF5eIn/8wndNSkUP9yxNywOkvsvFfj+/IR9Ii
-twti9A7PaPFbwKn9N3E+yjXptmdzDfAQi4SnfmetXF5MEUGScDGML7AEJ4HzZ4mP
-CrGOAU34gD+7bBl9SNoTIcYqtY+ARt624S/7HstJXd23Ve7KM9RiPUDYj7tRRc9i
-Ul/vGiwA3/ORbcpd+NLhqVsS3tw67uZwpUvY9l6oBeH6lAz9x5UkJBYcsY6toRSh
-Feu8c3HoNOulVbEXVjzcMmnbfFP6w6Qih1PL08pNSzjwh1TwNhg4uDbsy5cyfLft
-+WDQsHeoqaKGrxrTzt1Q
-=HEHK
+iQIcBAEBCAAGBQJUP/A8AAoJEPGu1DbS6WIAWHgP/27guBJKF54mdlawizK8Hiyn
+efUmyqR6o4kUgMM/q4P4yYAwn/a+80iX7hi1Labg5jzwIapotDdgd4647LdOn7j0
+qI5Hs0GjiAPBV3KDCz2lXWB/DPg7UIVIP/QJgLUAN8YU54wEmvt67Dw+o2aM074t
+2Wnz/sw/lVhRviiMx9Q40vykHMgb0s7bCiNtbuCKu+VP9r6pCT8Qfasgx0x/Z98w
+DtGrYmIN2fLcFjlr6s/TY2P033hM7A0Tx8Sfo/G/P9QYpCjlv6wEL4SJWxeCTUre
+fnFEwbBcG/yw92UVJJzJJhJ8kL212K+wYtssWHlrPiKombBDl+gA1In/1CuEFPks
+oqLE4IX1GuSWZcLvPBG5MBqs1MaEQ1JkjWJbWM27lYNRgj2fTUap6j1JRnM95Hex
+v+IRi/tTlb0SsJipfwEW0fdk2kvl+AHGGrCVUA2jNRBZypdavkPNA+ldurgirluP
+nounDPohuiIS5AsD2dP/70+tix8Sy1DpP60J89rlErRY+HpV1v9t+5KXjhpRXOF4
+RvAvnDoKM2NprgTSiLGvIhaFWG0ayV6bC8jMRpK6l2lqOPU1MA6nY9BdPwt9ZN9y
+VdhQytOAlymmGdtXuuLNgHZyC3WxZJPUbcnKKitv3DMoTIujScyHG6xQq2i9FSUj
+S9ik3tjwGoixKuSYiG9K
+=mKXQ
 -----END PGP SIGNATURE-----
