@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/xf86-video-ati
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-ati/ChangeLog,v 1.216 2014/06/26 10:28:25 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/xf86-video-ati/ChangeLog,v 1.217 2014/10/16 16:20:10 vapier Exp $
+
+*xf86-video-ati-7.5.0 (16 Oct 2014)
+
+  16 Oct 2014; Mike Frysinger <vapier@gentoo.org> +xf86-video-ati-7.5.0.ebuild:
+  Version bump #524884 by jospezial.  Add missing dependencies #515478 by
+  Patrick Lauer.
 
 *xf86-video-ati-7.4.0 (26 Jun 2014)
 
